--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@eslint/eslintrc": "^3.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@wxt-dev/auto-icons": "^1.0.2",
     "@wxt-dev/module-react": "^1.1.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
