--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "submit": "wxt submit",
+    "submit:latest": "rm .output; wxt zip && wxt submit --chrome-zip .output/*.zip",
     "compile": "tsc --noEmit",
     "postinstall": "wxt prepare",
     "lint": "eslint .",
