--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@wxt-dev/i18n": "^0.2.3",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.8.0",
     "@eslint/eslintrc": "^3.1.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@wxt-dev/auto-icons": "^1.0.2",
