--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "webext-permission-toggle": "^5.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.8.0",
