--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-perfectionist": "^3.9.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "html2canvas": "^1.4.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
